name:          sdp
version:       0.3
category:      Data Structures

synopsis:      Simple Data Processing
description:   SDP provides generalized interface for simple data operations.

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp/issues

copyright:     2019-2022 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

tested-with:
  -- lts-7.0
  GHC == 8.0.1,
  -- lts-7.24
  GHC == 8.0.1,
  -- lts-9.21
  GHC == 8.0.2,
  -- lts-11.22
  GHC == 8.2.2,
  -- lts-12.26
  GHC == 8.4.4,
  -- lts-14.27
  GHC == 8.6.5,
  -- lts-16.31
  GHC == 8.8.4,
  -- lts-18.24
  GHC == 8.10.7,
  -- lts-19.33
  GHC == 9.0.2,
  -- lts-20.26
  GHC == 9.2.8,
  -- lts-21.9
  GHC == 9.4.6,
  -- nightly-2023-09-23
  GHC == 9.6.2

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---


Library
  default-language: Haskell2010
  hs-source-dirs:   src

  build-tools: cpphs >=1.19
  ghc-options: -O2 -Wall -Wcompat -Wall-missed-specialisations
               -pgmPcpphs -optP--cpp -optP-traditional

  build-depends:
    base               >= 4.9 && <    5,
    fmr                >= 0.3 && <    1,
    ghc-prim           >= 0.5 && < 0.11,
    data-default-class >= 0.1 && <  0.2

  -- GHC 8.2.2 bug
  if impl(ghc >= 8.4)
    cpp-options: -DSDP_LINEAR_EXTRAS

  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUALIFIED_CONSTRAINTS

  -- GHC 8.0.2 bug
  if impl(ghc == 8.0.2)
    cpp-options: -DSDP_DISABLE_SHAPED

  exposed-modules:
    -- Commons
    SDP.SafePrelude
    SDP.Comparing
    SDP.Finite
    SDP.Tuple
    SDP.Ratio
    SDP.Proxy

    -- Sorting
    SDP.SortM.Insertion
    SDP.SortM.Tim
    SDP.SortM

    -- Classes
    SDP.Forceable
    SDP.SequenceM
    SDP.Sequence
    SDP.Estimate
    SDP.Bordered
    SDP.Nullable
    SDP.IndexedM
    SDP.LinearM
    SDP.Unboxed
    SDP.Indexed
    SDP.Linear
    SDP.Index
    SDP.Shape
    SDP.MapM
    SDP.ZipM
    SDP.Scan
    SDP.Sort
    SDP.Map
    SDP.Cat
    SDP.Zip
    SDP.Set

    -- Templates
    SDP.Templates.AnyBorder
    SDP.Templates.AnyChunks
    SDP.Templates.AnyVar

    -- Primitives
    SDP.Prim.SArray
    SDP.Prim.SBytes
    SDP.Prim.TArray

    -- Boxed arrays
    SDP.Array
    SDP.Array.ST
    SDP.Array.IO
    SDP.Unrolled
    SDP.Unrolled.ST
    SDP.Unrolled.IO
    SDP.Unrolled.Unlist
    SDP.Unrolled.STUnlist
    SDP.Unrolled.IOUnlist

    -- Unboxed arrays
    SDP.Bytes
    SDP.Bytes.ST
    SDP.Bytes.IO
    SDP.ByteList
    SDP.ByteList.ST
    SDP.ByteList.IO
    SDP.ByteList.Ublist
    SDP.ByteList.STUblist
    SDP.ByteList.IOUblist

    -- STM arrays
    Control.Concurrent.SDP.TArray
    Control.Concurrent.SDP.TUnlist
    Control.Concurrent.SDP.TUnrolled

    -- Service definitions
    Control.Exception.SDP

    Text.Show.SDP
    Text.Read.SDP

  other-modules:
    -- To eliminate cyclic imports within the library
    SDP.Internal.Utils

    -- To eliminate cyclic imports in SDP.Nullable and SDP.Index
    SDP.Index.Class

    -- Зrimitive operations that do not require the Unboxed class, but used in
    -- it and its instances
    SDP.Unboxed.Utils

    -- Unboxed class with instances
    SDP.Unboxed.Class

